--- a/Junior/loopstudios-landing-page/styles/scss/base/_utilities.scss
+++ b/Junior/loopstudios-landing-page/styles/scss/base/_utilities.scss
@@ -3,7 +3,7 @@
 
 .container{
     @include center-auto;
-    width: unquote("min(88%, 1100px)");
+    width: unquote("min(88%, 1110px)");
    
 }
 
